# canmv_k230

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Kconfig  Kconfig.micropython  Kconfig.openmv  Makefile  README.md
.github/workflows/: build_manual.yml  release.yml
fuzz_test/: ALL_SOURCE_FUZZING_SUGGESTIONS.md  CMakeLists.txt  fuzz_compile.sh
fuzz_test/corpus/: README.md
fuzz_test/corpus/fuzz_array/: index_heavy_walk.seed  push_sort_cycle.seed  resize_sort_mix.seed
fuzz_test/corpus/fuzz_ff_wrapper/: seek_truncate_mix.seed  typed_roundtrip.seed
fuzz_test/corpus/fuzz_ringbuf/: drain_refill.seed
fuzz_test/corpus/fuzz_unaligned_memcpy/: boundary_lengths.seed  misaligned_triplets.seed
fuzz_test/harnesses/: fuzz_array.cpp  fuzz_ff_wrapper.cpp  fuzz_recent_fixes_guardrails.cpp  fuzz_ringbuf.cpp  fuzz_unaligned_memcpy.cpp
fuzz_test/scripts/: generate_fuzzing_catalog.sh
fuzz_test/src/: micropython_host_stubs.c  xalloc_host.c
fuzz_test/stubs/: hal_rvv_ops.h  imlib_config.h
fuzz_test/stubs/py/: obj.h  runtime.h  stackctrl.h
port/: Makefile  mpconfigport.h
port/ai_cube/: ai_cube.c  fuction_ocrdet.cpp  postprocess.cpp
port/ai_demo/: ai_demo.c  body_seg.cpp  face_detection.cpp  licence_det.cpp  nanotracker.cpp  object_segment.cpp  ocr_rec.cpp  opencv_find_blobs.cpp  opencv_wrap.cpp  person_kp.cpp  rgb888_process.cpp  yolo_det.cpp  yolo_license_plate_det.cpp  yolo_obb.cpp  yolo_pose.cpp  yolo_seg.cpp  yunet_postprocess.cpp
port/ai_demo/tts_zh/: text_normalization.cpp  tone_sanhi.cpp  tts_zh_preprocess.cpp  utils_tts.cpp
port/boards/: manifest.py  mpconfigport.mk
port/boards/k230_canmv_gt6700/: mpconfigboard.h
port/boards/k230_canmv_hiwonder/: mpconfigboard.h
port/boards/k230_canmv_mrt/: mpconfigboard.h
port/boards/k230_canmv_rtt_evb/: mpconfigboard.h
port/boards/k230_canmv_wondermk/: manifest.py  mpconfigboard.h
port/boards/k230_canmv_yahboom/: manifest.py  mpconfigboard.h
port/boards/k230_evb/: mpconfigboard.h
port/boards/k230_labplus_1956/: mpconfigboard.h
port/boards/k230d_canmv_atk_dnk230d/: mpconfigboard.h
port/boards/k230d_canmv_bpi_zero/: mpconfigboard.h
port/boards/k230d_canmv_junroc_ai_cam/: mpconfigboard.h
port/boards/k230d_canmv_lushanpi_lite/: mpconfigboard.h
port/boards/k230d_canmv_mini/: mpconfigboard.h
port/boards/k230d_evb/: mpconfigboard.h
port/core/: gccollect.c  main.c  mphalport.c  mpp_vb_mgmt.c  mpthreadport.c
port/cv_lite/: cv_lite.c
port/drivers/: drv_canmv_misc_dev.c  drv_canmv_misc_dev.h  drv_fpioa.c  drv_gpio.c  drv_timer.c
port/include/: canmv_drivers.h  modmachine.h  py_modules.h
port/kpu/: ai2d.c  kpu.c  modnncase_runtime.c
port/machine/: machine_adc.c  machine_bitstream.c  machine_fft.c  machine_fpioa.c  machine_hw_spi.c  machine_i2c.c  machine_i2c_slave.c  machine_led.c  machine_lsm6dsm.c  machine_otp.c  machine_pin.c  machine_pwm.c  machine_rotary_encode.c  machine_rotary_encoder.c  machine_rtc.c  machine_spi_lcd.c  machine_timer.c  machine_touch.c  machine_touch.cst_mutcap.c  machine_touch.gt911.c  machine_touch.h  machine_uart.c  machine_wdt.c  modmachine.c
port/modules/: modmedia.c  modmedia.display.c  modmedia.gsdma.c  modmedia.uvc.c  modmedia.videoframe.c  modnonai2d.c  modnonai2d.csc.c  modusb.c  modusb.hid.c  modusb.serial.c  moduvc.c  modvbmgmt.c
port/mp_modules/: modos.c  modtermios.c  modtime.c  overlay_machine_pwm.c  overlay_modcryptolib.c  overlay_modgc.c  overlay_modhashlib.c  overlay_modonewire.c  overlay_modos.c  overlay_modssl_mbedtls.c  overlay_vfs_posix.c  overlay_vfs_posix_file.c
port/multi_media/: RtspServer.c  multimedia_runtime.c
port/network/: network_rt_smart.c  network_rt_smart.h
port/omv/: ide_dbg.c  ide_dbg.h  ide_dbg_vo_wbc.c
port/overlay/: extmod_vfs_posix.c
resources/libs/: AIBase.py  PipeLine.py  PlatTasks.py  Utils.py  WBCRtsp.py  YOLO.py
resources/test_todo/: cartoon_filter.py  color_bilateral_filter.py  find_circles.py  keypoints.py  linear_regression_robust.py  template_matching.py
tools/: canmv_stub_overrides.json  gen_canmv_stubs.py  generate_ide_resource.py  get_git_version.py  package_canmv_vscode_examples.py  package_canmv_vscode_stubs.py  sync_port_stub_docs.py
unit_test/: ALL_SOURCE_UNIT_TEST_SUGGESTIONS.md  CMakeLists.txt  README.md  compile_run.sh
unit_test/scripts/: generate_test_suggestions.sh
unit_test/src/: micropython_host_stubs.c  xalloc_host.c
unit_test/stubs/: hal_rvv_ops.h  imlib_config.h
unit_test/stubs/py/: mphal.h  obj.h  runtime.h  stackctrl.h
unit_test/tests/: test_all_sources_catalog.cpp  test_array.cpp  test_ff_wrapper.cpp  test_mutex.cpp  test_python_sources.cpp  test_recent_fixes_guardrails.cpp  test_ringbuf.cpp  test_unaligned_memcpy.cpp
(+335 files in other folders)
